--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -9,8 +9,8 @@
 }
 
 .order-container {
-    width: 80%;
-    border: whitesmoke 1px solid;
+    width: 60%;
+    border: #5B5941 2px solid;
     border-radius: 5px;
     margin: 1rem auto 1rem auto;
     background-color: #87B6A7;
@@ -32,12 +32,17 @@
 
 .ingredients{
     display: inline-block;
-    width: 8vw;
-    height: 30vh;
-    border: whitesmoke 1px solid;
+    width: 120px;
+    min-width: none;
+    height: 150px;
+    max-height: 150px;
+    border: #5B5941 2px solid;
     border-radius: 5px;
     vertical-align: top;
     margin-left: 5px;
     margin-right: 5px;
+    color: #5B5941;
+    background-color: #E3F09B;
+    opacity: 0.7;
 
 }
