--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
  */
 
 /* CSS Custom Properties */
-:root {
+/* :root {
   --white: #FFFFFF;
   --tan-1: #FBF9F6;
   --tan-2: #E7E2DD;
@@ -103,14 +103,14 @@ code {
 p.error-message {
   color: var(--orange);
   text-align: center;
-}
+} */
 
-form {
+/* form {
   display: grid;
   grid-template-columns: 1fr 3fr;
   gap: 1.25vmin;
   color: var(--text-light);
-}
+} */
 
 label {
   font-size: 2vmin;
@@ -124,7 +124,7 @@ input {
   border: .1vmin solid var(--tan-3);
   border-radius: .5vmin;
   color: var(--text-dark);
-  background-image: none !important; /* prevent lastpass */
+  background-image: none !important; 
   outline: none;
 }
 
