--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,3 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
- */
-
 /* CSS Custom Properties */
 :root {
   --white: #FFFFFF;
@@ -96,6 +81,7 @@ code {
   background-color: var(--white);
   border: .1vmin solid var(--ebony);
   border-radius: 1vmin;
+  width: 600px;
 }
 
 p {
@@ -118,12 +104,13 @@ label {
   font-size: 2vmin;
   display: flex;
   align-items: center;
+  text-align: left;
 }
 
 input {
   padding: 1vmin;
   font-size: 2vmin;
-  border: .1vmin solid var(--text-light);
+  border: .3vmin solid var(--text-light);
   border-radius: .5vmin;
   color: var(--text-dark);
   background-image: none !important; /* prevent lastpass */
@@ -135,6 +122,7 @@ input:focus {
 }
 
 button, a.button {
+  font-family: 'Inter', sans-serif;
   margin: 1vmin;
   padding: 1vmin;
   color: var(--text-dark);
