--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
  */
 
 /* CSS Custom Properties */
-/* :root {
+:root {
   --white: #FFFFFF;
   --yellow: #F7D08A;
   --green: #E3F09B;
@@ -37,6 +37,7 @@ body {
   background-color: var(--white);
   padding: 2vmin;
   height: 100vh;
+  margin-bottom: 20vh;
 }
 
 code {
@@ -105,9 +106,9 @@ p {
 p.error-message {
   color: var(--red);
   text-align: center;
-} */
+}
 
-/* form {
+form {
   display: grid;
   grid-template-columns: 1fr 3fr;
   gap: 1.25vmin;
@@ -167,5 +168,5 @@ button:disabled, form:invalid button[type="submit"] {
 
 button[type="submit"] {
   grid-column: span 2;
-  margin: 1vmin 0 0;
+  /* margin: 1vmin 0 0; */
 }
