--- a/src/pages/AuthPage/AuthPage.css
+++ b/src/pages/AuthPage/AuthPage.css
@@ -28,3 +28,9 @@ div.welcome-page > p {
     margin-top: 5px;
     color: var(--blue);
 }
+
+button.auth-button:hover {
+    /* -webkit-box-shadow: 0px 4px 0px 1px rgba(135,182,167,1);
+    -moz-box-shadow: 0px 4px 0px 1px rgba(135,182,167,1); */
+    box-shadow: 0px 4px 0px 1px var(--blue);
+}
