--- a/src/components/Ingredient/Ingredient.css
+++ b/src/components/Ingredient/Ingredient.css
@@ -1,4 +1,4 @@
-.edit-list-container .jig .ingredient-container {
+.edit-list-container .ingredient-container {
     width: 50vw;
     margin: auto;
     border: 1px solid var(--ebony);
@@ -26,7 +26,7 @@
 }
 
 
-.ingredient-card{
+.main-components-container .ingredient-card{
     display: inline-block;
     width: 120px;
     min-width: none;
