--- a/src/components/Ingredient/Ingredient.css
+++ b/src/components/Ingredient/Ingredient.css
@@ -26,7 +26,7 @@
 }
 
 
-.main-components-container .ingredient-card{
+.jig .ingredient-card{
     display: inline-block;
     width: 120px;
     min-width: none;
