small css tweaks to look a little cleaner on edit menu page

--- a/src/components/Ingredient/Ingredient.css
+++ b/src/components/Ingredient/Ingredient.css
@@ -14,7 +14,7 @@
     display:flex;
 }
 .edit-list-container .edit-form{
-    background-color: var(--blue);
+    background-color: var(--white);
     padding: 2vh;
     color: var(--ebony);
 }
