--- a/src/pages/EditMenuPage/EditMenuPage.css
+++ b/src/pages/EditMenuPage/EditMenuPage.css
@@ -11,5 +11,13 @@
     margin: auto;
     overflow-y:auto;
     height: 55vh;
-    
+    scrollbar-color: red blue;
+}
+.edit-list-container::-webkit-scrollbar{
+    background-color: var(--green);
+    border-radius: 5px;
+}
+.edit-list-container::-webkit-scrollbar-thumb{
+    background: var(--blue);
+    border-radius: 5px;
 }
