--- a/src/pages/NewOrderPage/NewOrderPage.css
+++ b/src/pages/NewOrderPage/NewOrderPage.css
@@ -8,7 +8,7 @@
     border-radius: 5px;
     margin-right: 20px;
 }
-.ingredient-list-container{
+.jig .ingredient-list-container{
     flex-wrap: nowrap;
     align-items: center;
     margin-right: 5px;
