--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -31,8 +31,7 @@
     border: var(--ebony) 2px solid;
     border-radius: 5px;
     vertical-align: top;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin: 5px 5px 10px 5px;
     color: var(--ebony);
     opacity: 0.7;
 }
