--- a/src/components/AddIngredientForm/AddIngredientForm.css
+++ b/src/components/AddIngredientForm/AddIngredientForm.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     border: 1px solid var(--ebony);
-    width: fit-content;
+    width: 80vw;
+    min-width: fit-content;
     margin: auto;
     border-radius: 5px;
     background-color: var(--green);
@@ -36,4 +37,5 @@
     display: flex;
     flex-direction: row;
     margin: 2vh;
+    width: fit-content;
 }
