--- a/src/pages/NewOrderPage/NewOrderPage.css
+++ b/src/pages/NewOrderPage/NewOrderPage.css
@@ -1,17 +1,18 @@
-.main-components-container{
+.new-orders-container{
     display: flex;
 }
 
-.main-components-container .main-sub{
+.new-orders-container .main-sub{
     flex:1;
     border: var(--ebony) 2px solid;
     border-radius: 5px;
     margin-right: 20px;
     margin-left: 20px;
 }
-.jig {
+
+.new-order-ingredient-list {
     flex-wrap: nowrap;
     align-items: center;
     margin-right: 5px;
-    margin-left: 5px;  
+    margin-left: 5px;
 }
