--- a/src/pages/NewOrderPage/NewOrderPage.css
+++ b/src/pages/NewOrderPage/NewOrderPage.css
@@ -2,9 +2,14 @@
     display: flex;
 }
 
+h3.order-builder-title {
+    border-bottom: var(--ebony) 2px solid;
+    padding-bottom: 1rem;
+}
+
 .new-orders-container .main-sub{
     flex:1;
-    border: var(--ebony) 2px solid;
+    /* border: var(--ebony) 1px solid; */
     border-radius: 5px;
     margin-right: 20px;
     margin-left: 20px;
