--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -34,6 +34,8 @@
     margin: 5px 5px 10px 5px;
     color: var(--ebony);
     opacity: 0.7; */
+    font-family: 'Gloock', serif;
+    font-weight: bold;
     display: inline-block;
     width: 120px;
     min-width: none;
