--- a/src/components/Ingredient/Ingredient.css
+++ b/src/components/Ingredient/Ingredient.css
@@ -31,7 +31,7 @@
     display: inline-block;
     width: 120px;
     min-width: none;
-    height: 170px;
+    height: 220px;
     border: var(--ebony) 2px solid;
     border-radius: 5px;
     vertical-align: top;
@@ -44,7 +44,7 @@
     display: inline-block;
     width: 120px;
     min-width: none;
-    height: 170px;
+    height: 220px;
     border: var(--ebony) 2px solid;
     border-radius: 5px;
     vertical-align: top;
@@ -55,6 +55,9 @@
     background-color: #E3F09B;
     opacity: 0.7;
 
+}
+.btn-delete{
+    margin-top: 4vh;
 }
 
 .inline{
