--- a/src/components/Ingredient/Ingredient.css
+++ b/src/components/Ingredient/Ingredient.css
@@ -27,6 +27,7 @@
 }
 
 /* ----- Style for New Order page ----- */
+/* styles for available ingredient items */
 .new-order-ingredient-list .ingredient-card{
     display: inline-block;
     width: 120px;
@@ -39,6 +40,26 @@
     background-color: var(--green);
 }
 
+
+.new-order-ingredient-list .ingredient-card-details {
+    display: inline-flex;
+    flex-direction: row;
+}
+
+.new-order-ingredient-list .ingredient-card-details h3 {
+    margin-top: 0;
+    margin-bottom: 0px;
+}
+.new-order-ingredient-list .ingredient-card-details p {
+    margin-top: 0;
+    margin-bottom: 0px;
+}
+.new-order-ingredient-list .ingredient-card-details img {
+    margin-top: .5em;
+    margin-bottom: .5em;
+}
+
+/* ingredient item cards in order builder */
 .order-builder-ingredient-list .ingredient-card{
     display: inline-block;
     width: 120px;
@@ -53,15 +74,25 @@
     background-color: var(--blue);
 }
 
-.inline{
-    height: 60%;    
+.order-builder-ingredient-list .ingredient-card-details h3 {
+    margin-top: 0;
+    margin-bottom: 0px;
+}
+.order-builder-ingredient-list .ingredient-card-details p {
+    margin-top: 0;
+    margin-bottom: 0px;
+}
+.order-builder-ingredient-list .ingredient-card-details img {
+    margin-top: .5em;
+    margin-bottom: .5em;
 }
 
-.ingredient-card h3{
+
+/* .ingredient-card h3{
     height: 35%;
-}
+} */
 
-.ingredientImage {
+.ingredient-image {
     width: 50px;
     height: 50px;
     background-color: var(--white);
