--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -8,6 +8,7 @@
     border: var(--ebony) 2px solid;
     border-radius: 5px;
     margin: 1rem auto 1rem auto;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; 
 }
 
 .order-container-header{
@@ -47,4 +48,5 @@
     color: #5B5941;
     background-color: #E3F09B;
     opacity: 0.7;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; 
 }
