--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -50,3 +50,10 @@
     opacity: 0.7;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; 
 }
+
+.ingredientImage{
+        width: 50px;
+        height: 50px;
+        background-color: var(--white);
+
+}
