--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,45 +1,42 @@
-.icon{
-    margin-left: 2vw;
-    padding: 12.5px;
-    border: 2px solid black;
-    border-radius: 60%;
-    background-color: white;
-    height: 50px;
-    width: 50px;
-    
-    margin-top: 9vh;
-  }
-  .title{
-    /* display: inline-flex; */
-    font-size: 8vh;
-    /* flex-direction: row; */
-    margin-right: auto; 
+.icon {
+  margin-left: 2vw;
+  padding: 12.5px;
+  border: 2px solid black;
+  border-radius: 60%;
+  background-color: white;
+  height: 50px;
+  width: 50px;
 
-  }
-  .NavBar{
-    
-  }
-  .links{
-    /* margin-right: 2vh; */
-    text-decoration: none;
-    color: black;
-    margin-top: 10vh;
-     max-height: 2vh;
-     padding: 2vh 0 0 0 
-  }
+  margin-top: 9vh;
+}
+.title {
+  /* display: inline-flex; */
+  font-size: 8vh;
+  /* flex-direction: row; */
+  margin-right: auto;
+}
+.NavBar {
+}
+.links {
+  /* margin-right: 2vh; */
+  text-decoration: none;
+  color: black;
+  margin-top: 10vh;
+  max-height: 2vh;
+  padding: 2vh 0 0 0;
+}
 
-  .links:hover{
-    color: red;
-  }
+.links:hover {
+  color: red;
+}
 
-  .links:click{
-    /* color: white; */
-  }
-  
-  .design{
-    display: flex;
-    /* flex-direction: row;
+.links:click {
+  /* color: white; */
+}
+
+.design {
+  display: flex;
+  /* flex-direction: row;
     align-content: flex-end;
     justify-content: flex-end; */
-  }
-  
+}
