--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -1,30 +1,31 @@
 .past-orders-container {
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .order-container {
-    width: 60%;
-    border: var(--ebony) 2px solid;
-    border-radius: 5px;
-    margin: 1rem auto 1rem auto;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; 
+  width: 60%;
+  border: var(--ebony) 2px solid;
+  border-radius: 5px;
+  margin: 1rem auto 1rem auto;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
-.order-container-header{
-    display: flex;
-    justify-content: space-evenly;
-    background-color: var(--yellow);
-    opacity: 0.8;
+.order-container-header {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: var(--yellow);
+  opacity: 0.8;
 }
 
-.order-ingredients-container{
-    flex-wrap: nowrap;
-    align-items: center;
+.order-ingredients-container {
+  flex-wrap: nowrap;
+  align-items: center;
 }
 
-.ingredients{
-    /* display: inline-block;
+.ingredients {
+  /* display: inline-block;
     width: 120px;
     min-width: none;
     height: 150px;
@@ -35,25 +36,25 @@
     margin: 5px 5px 10px 5px;
     color: var(--ebony);
     opacity: 0.7; */
-    font-family: 'Gloock', serif;
-    font-weight: bold;
-    display: inline-block;
-    width: 120px;
-    min-width: none;
-    height: 170px;
-    border: #5B5941 2px solid;
-    border-radius: 5px;
-    vertical-align: top;
-    margin: 10px 5px 10px 5px;
-    color: #5B5941;
-    background-color: #E3F09B;
-    opacity: 0.7;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; 
+  font-family: "Gloock", serif;
+  font-weight: bold;
+  display: inline-block;
+  width: 120px;
+  min-width: none;
+  height: 170px;
+  border: #5b5941 2px solid;
+  border-radius: 5px;
+  vertical-align: top;
+  margin: 10px 5px 10px 5px;
+  color: #5b5941;
+  background-color: #e3f09b;
+  opacity: 0.7;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
-.ingredientImage{
-        width: 50px;
-        height: 50px;
-        background-color: var(--white);
-
+.ingredientImage {
+  width: 50px;
+  height: 50px;
+  background-color: var(--white);
 }
