--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,13 +1,11 @@
 .icon {
-  margin-left: 2vw;
+  margin: auto 5vw auto 2vw;
   padding: 12.5px;
   border: 2px solid black;
   border-radius: 60%;
   background-color: white;
   height: 50px;
   width: 50px;
-
-  margin-top: 9vh;
 }
 .title {
   /* display: inline-flex; */
@@ -24,6 +22,7 @@
   margin-top: 10vh;
   max-height: 2vh;
   padding: 2vh 0 0 0;
+  margin: auto 1vw;
 }
 
 .links:hover {
