--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-.icon{
+.icon {
     margin-left: 2vw;
     padding: 12.5px;
     border: 2px solid black;
@@ -6,40 +6,29 @@
     background-color: white;
     height: 50px;
     width: 50px;
-    
-    margin-top: 9vh;
+    margin-top: inherit;
   }
-  .title{
-    /* display: inline-flex; */
-    font-size: 8vh;
-    /* flex-direction: row; */
-    margin-right: auto; 
 
+  .title {
+    font-size: 8vh;
+    margin-right: auto; 
+    margin-top: inherit;
+    margin-bottom: 0;
+    color: var(--red);
   }
-  .NavBar{
-    
-  }
+
   .links{
-    /* margin-right: 2vh; */
     text-decoration: none;
     color: black;
-    margin-top: 10vh;
-     max-height: 2vh;
-     padding: 2vh 0 0 0 
-  }
-
-  .links:hover{
-    color: red;
-  }
-
-  .links:click{
-    /* color: white; */
+    margin-top: inherit;
+    max-height: 2vh;
+    padding: 2vh 0 0 0;
+    margin-right: 5vh;
   }
   
-  .design{
+  .design {
     display: flex;
-    /* flex-direction: row;
-    align-content: flex-end;
-    justify-content: flex-end; */
+    flex-direction: row;
+    align-content: center;
+    margin-bottom: 3vh;
   }
-  
